--- a/webapps/pom.xml
+++ b/webapps/pom.xml
@@ -14,11 +14,7 @@
 	<name>webapps</name>
 
 	<properties>
-		<hamcrest_version>1.3</hamcrest_version>
-		<net.sf.json_version>2.4</net.sf.json_version>
-		<servlet_version>3.1.0</servlet_version>
 		<struts_version>2.3.16.1</struts_version>
-		<spring_version>4.0.3.RELEASE</spring_version>
 		<mysql_version>5.1.20</mysql_version>
 		<httpcomponents_version>4.2.1</httpcomponents_version>
 		<commons-email_version>1.2</commons-email_version>
@@ -51,12 +47,6 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>${servlet_version}</version>
 		</dependency>
-		<!--net.sf.json-lib
-		<dependency>
-			<groupId>net.sf.json-lib</groupId>
-			<artifactId>json-lib</artifactId>
-			<classifier>jdk15</classifier>
-		</dependency>-->
 		<!--org.apache.struts-->
 		<dependency>
 			<groupId>org.apache.struts</groupId>
@@ -221,7 +211,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<version>${commons_lang3}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
