--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -33,9 +33,11 @@
 		<jdk_version>1.8</jdk_version>
 		<log4j_version>1.2.14</log4j_version>
 		<junit_version>4.10</junit_version>
+		<spring_version>4.1.0.RELEASE</spring_version>
 		<hamcrest_version>1.3</hamcrest_version>
 		<fastjson_version>1.1.40</fastjson_version>
-		<json-lib_version>2.4</json-lib_version>
+		<commons_lang3>3.3.2</commons_lang3>
+		<servlet_version>3.1.0</servlet_version>
 		<encoding>UTF-8</encoding>
 		<!--
 			${env.PATH}
@@ -83,12 +85,6 @@
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>net.sf.json-lib</groupId>
-				<artifactId>json-lib</artifactId>
-				<version>${json-lib_version}</version>
-				<classifier>jdk15</classifier>
-			</dependency>
 		</dependencies>
 	</dependencyManagement>
 
@@ -287,7 +283,7 @@
 			<url>http://repository.sonatype.org/content/groups/public/</url>
 			 -->
 			 <url>http://repository.apache.org/snapshots/</url>
-			
+
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -387,8 +383,8 @@
 			</snapshots>
 			<id>codehausSnapshots</id>
 			<name>Codehaus Snapshots</name>
-			<url>http://snapshots.maven.codehaus.org/maven2</url> 
-			<!-- 
+			<url>http://snapshots.maven.codehaus.org/maven2</url>
+			<!--
 			<url>http://repo1.maven.org/maven2</url>
 			-->
 			<layout>default</layout>
