--- a/webmybatis/pom.xml
+++ b/webmybatis/pom.xml
@@ -1,8 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" 
+<project xmlns="http://maven.apache.org/POM/4.0.0"
 	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
-		  
+
   	<modelVersion>4.0.0</modelVersion>
 	<parent>
 	    <artifactId>webcommon</artifactId>
@@ -12,11 +12,10 @@
 	</parent>
 	<artifactId>webmybatis</artifactId>
 	<packaging>jar</packaging>
-  
+
   	<properties>
-		<spring_version>4.0.3.RELEASE</spring_version>
 	</properties>
-  	
+
   	<build>
 		<finalName>webmybatis</finalName>
 		<outputDirectory>target/classes</outputDirectory>
@@ -34,7 +33,7 @@
 						<artifactId>mysql-connector-java</artifactId>
 						<version>${mysql.version}</version>
 					</dependency>
-			
+
 				</dependencies>
 				自动生成
 				<executions>
@@ -56,7 +55,7 @@
 			</plugin> -->
 		</plugins>
 	</build>
-	
+
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -102,22 +101,22 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.1</version>
+			<version>${commons_lang3}</version>
 		</dependency>
 	    <dependency>
 			<groupId>org.mybatis.generator</groupId>
 			<artifactId>mybatis-generator-core</artifactId>
 			<version>1.3.2</version>
 	    </dependency>
-	    
+
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>5.1.20</version>
 		</dependency>
 	</dependencies>
-  	
-  
+
+
 </project>
 
 
