--- a/webactivemq/pom.xml
+++ b/webactivemq/pom.xml
@@ -20,24 +20,17 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.6.1</version>
+			<version>${slf4j_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
-			<version>1.9</version>
+			<version>${commons_configuration}</version>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-all</artifactId>
-			<version>5.8.0</version>
-		</dependency>
-		 -->
 		<dependency>
 		  <groupId>org.apache.activemq</groupId>
 		  <artifactId>activemq-pool</artifactId>
-		  <version>5.8.0</version>
+		  <version>${activemq_verion}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -62,13 +55,13 @@
         <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jms</artifactId>
-			<version>3.2.2.RELEASE</version>
+			<version>${spring_version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>com.webapp</groupId>
 			<artifactId>webutils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${web_version}</version>
 		</dependency>
 
 	</dependencies>
