--- a/webapps/pom.xml
+++ b/webapps/pom.xml
@@ -14,11 +14,6 @@
 	<name>webapps</name>
 
 	<properties>
-		<struts_version>2.3.16.1</struts_version>
-		<mysql_version>5.1.20</mysql_version>
-		<httpcomponents_version>4.2.1</httpcomponents_version>
-		<commons-email_version>1.2</commons-email_version>
-		<commons-configuration_version>1.8</commons-configuration_version>
 	</properties>
 
 	<build>
@@ -74,12 +69,12 @@
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
-			<version>4.3.5.Final</version>
+			<version>${hibernate_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
-			<version>4.3.5.Final</version>
+			<version>${hibernate_version}</version>
 		</dependency>
 		<!--
 		-->
@@ -114,7 +109,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-hibernate3</artifactId>
-			<version>2.0.8</version>
+			<version>${spring_component}</version>
 		</dependency>
 
 		<dependency>
@@ -127,11 +122,6 @@
 			<artifactId>spring-expression</artifactId>
 			<version>${spring_version}</version>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-asm</artifactId>
-			<version>3.1.2.RELEASE</version>
-		</dependency> -->
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-test</artifactId>
@@ -147,26 +137,19 @@
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
-			<version>1.7.4</version>
+			<version>${aspectj_version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.7.4</version>
+			<version>${aspectj_version}</version>
 		</dependency>
 		<!--mysql-->
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>${mysql_version}</version>
-		</dependency>
-
-		<!--net.sf.jasperreports-->
-		<dependency>
-			<groupId>net.sf.jasperreports</groupId>
-			<artifactId>jasperreports</artifactId>
-			<version>4.7.0</version>
 		</dependency>
 
 		<!--org.apache.httpcomponents-->
@@ -188,25 +171,18 @@
 		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
-			<version>${commons-configuration_version}</version>
+			<version>${commons_configuration}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
-			<version>${commons-email_version}</version>
+			<version>${commons_email}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
-			<version>2.0</version>
+			<version>${commons_pool2}</version>
 		</dependency>
-		<!--
-		<dependency>
-			<groupId>commons-pool</groupId>
-			<artifactId>commons-pool</artifactId>
-			<version>1.6</version>
-		</dependency>
-		 -->
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -218,43 +194,26 @@
 			<artifactId>commons-io</artifactId>
 			<version>1.3.2</version>
 		</dependency>
-
-		<!--
-		<dependency>
-			<groupId>asm</groupId>
-			<artifactId>asm-util</artifactId>
-			<version>3.3</version>
-		</dependency>
-		<dependency>
-			<groupId>cglib</groupId>
-			<artifactId>cglib</artifactId>
-			<version>2.2.2</version>
-		</dependency>
-		-->
-
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.9</version>
 		</dependency>
-
+		<dependency>
+			<groupId>net.sf.jasperreports</groupId>
+			<artifactId>jasperreports</artifactId>
+			<version>5.6.1</version>
+		</dependency>
 		<dependency>
 			<groupId>xerces</groupId>
 			<artifactId>xercesImpl</artifactId>
 			<version>2.11.0</version>
 		</dependency>
-
 		<dependency>
 			<groupId>org.jboss.netty</groupId>
 			<artifactId>netty</artifactId>
 			<version>3.2.5.Final</version>
 		</dependency>
-		<dependency>
-			<groupId>com.webapp</groupId>
-			<artifactId>webutils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
-
 		<dependency>
 			<groupId>xml-apis</groupId>
 			<artifactId>xml-apis</artifactId>
@@ -287,12 +246,11 @@
 			<version>1.0-FCS</version>
 		</dependency>
 
-
-		<!-- <dependency>
-			<groupId>org.python</groupId>
-			<artifactId>jython</artifactId>
-			<version>2.5.3</version>
-		</dependency> -->
+		<dependency>
+			<groupId>com.webapp</groupId>
+			<artifactId>webutils</artifactId>
+			<version>${web_version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
