--- a/webclient/pom.xml
+++ b/webclient/pom.xml
@@ -14,6 +14,8 @@
 	<packaging>war</packaging>
 
 	<properties>
+		<cxf_version>2.7.8</cxf_version>
+		<hessian_version>4.0.33</hessian_version>
 	</properties>
 
 	<build>
@@ -27,23 +29,23 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
+			<version>${hamcrest_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>apache-cxf</artifactId>
-			<version>2.7.8</version>
+			<version>${cxf_version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.2.1</version>
+			<version>${httpcomponents_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.2.1</version>
+			<version>${httpcomponents_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -63,17 +65,17 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-remoting</artifactId>
-			<version>2.0.8</version>
+			<version>${spring_component}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.caucho</groupId>
 			<artifactId>hessian</artifactId>
-			<version>4.0.33</version>
+			<version>${hessian_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.webapp</groupId>
 			<artifactId>webservice</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${web_version}</version>
 		</dependency>
 
 	</dependencies>
