--- a/webhadoop/pom.xml
+++ b/webhadoop/pom.xml
@@ -14,8 +14,14 @@
 	<packaging>jar</packaging>
 
 	<properties>
-		<hamcrest_version>1.3</hamcrest_version>
-		<spring_version>4.1.0.RELEASE</spring_version>
+		<hadoop_version>2.2.0</hadoop_version>
+		<zookeeper_version>3.4.5</zookeeper_version>
+		<hbase_version>0.98.0-hadoop2</hbase_version>
+		<sqoop_version>1.99.2</sqoop_version>
+		<hive_version>0.12.0</hive_version>
+		<mahout_version>0.9</mahout_version>
+		<cassandra_version>2.0.2</cassandra_version>
+		<pig_version>0.12.0</pig_version>
 	</properties>
 
 	<build>
@@ -51,7 +57,7 @@
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
+			<version>${hamcrest_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -72,7 +78,17 @@
 		<dependency>
 			<groupId>org.apache.hadoop</groupId>
 			<artifactId>hadoop-auth</artifactId>
-			<version>2.2.0</version>
+			<version>${hadoop_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-client</artifactId>
+			<version>${hadoop_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.hadoop</groupId>
+			<artifactId>hadoop-test</artifactId>
+			<version>1.2.1</version>
 		</dependency>
 
 		<dependency>
@@ -81,130 +97,102 @@
 			<version>2.5.0</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-client</artifactId>
-			<version>2.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-test</artifactId>
-			<version>1.2.1</version>
-		</dependency>
-
-		<!--
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-common</artifactId>
-			<version>2.2.0</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-core</artifactId>
-			<version>1.2.1</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.hadoop</groupId>
-			<artifactId>hadoop-tools</artifactId>
-			<version>1.2.1</version>
-		</dependency>
-		-->
 		 <dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-common</artifactId>
-			<version>0.12.0</version>
+			<version>${hive_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-cli</artifactId>
-			<version>0.12.0</version>
+			<version>${hive_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-exec</artifactId>
-			<version>0.12.0</version>
+			<version>${hive_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hive</groupId>
 			<artifactId>hive-jdbc</artifactId>
-			<version>0.12.0</version>
+			<version>${hive_version}</version>
 		</dependency>
 
 		<!---->
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase</artifactId>
-			<version>0.98.0-hadoop2</version>
+			<version>${hbase_version}</version>
 			<type>pom</type>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-client</artifactId>
-			<version>0.98.0-hadoop2</version>
+			<version>${hbase_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-server</artifactId>
-			<version>0.98.0-hadoop2</version>
+			<version>${hbase_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.hbase</groupId>
 			<artifactId>hbase-testing-util</artifactId>
-			<version>0.98.0-hadoop2</version>
+			<version>${hbase_version}</version>
 		</dependency>
 
 		<!--
 		<dependency>
 			<groupId>org.apache.pig</groupId>
 			<artifactId>pig</artifactId>
-			<version>0.12.0</version>
+			<version>${pig_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.pig</groupId>
 			<artifactId>pigunit</artifactId>
-			<version>0.12.0</version>
+			<version>${pig_version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.pig</groupId>
 			<artifactId>pigsmoke</artifactId>
-			<version>0.12.0</version>
+			<version>${pig_version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.zookeeper</groupId>
 			<artifactId>zookeeper</artifactId>
-			<version>3.4.5</version>
+			<version>${zookeeper_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cassandra</groupId>
 			<artifactId>cassandra-all</artifactId>
-			<version>2.0.2</version>
+			<version>${cassandra_version}</version>
 		</dependency>-->
 
 		<!--
 		<dependency>
 			<groupId>org.apache.sqoop</groupId>
 			<artifactId>sqoop-core</artifactId>
-			<version>1.99.2</version>
+			<version>${sqoop_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sqoop</groupId>
 			<artifactId>sqoop-common</artifactId>
-			<version>1.99.2</version>
+			<version>${sqoop_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.sqoop</groupId>
 			<artifactId>sqoop-server</artifactId>
-			<version>1.99.2</version>
+			<version>${sqoop_version}</version>
 		</dependency>
 		-->
 
 		<dependency>
 			<groupId>org.apache.mahout</groupId>
 			<artifactId>mahout-core</artifactId>
-			<version>0.9</version>
+			<version>${mahout_version}</version>
 		</dependency>
 
 		<dependency>
@@ -222,7 +210,7 @@
 		<dependency>
 			<groupId>com.webapp</groupId>
 			<artifactId>webutils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${web_version}</version>
 		</dependency>
 	</dependencies>
 
