--- a/weblucene/pom.xml
+++ b/weblucene/pom.xml
@@ -15,6 +15,11 @@
 
 	<properties>
 		<lucene_version>4.7.2</lucene_version>
+		<elasticsearch_version>1.3.2</elasticsearch_version>
+		<tika_version>1.3</tika_version>
+		<ansj_version>1.4</ansj_version>
+		<mmseg4j_version>1.9.1</mmseg4j_version>
+		<pinyin4j_version>2.5.0</pinyin4j_version>
 	</properties>
 
 	<build>
@@ -26,11 +31,15 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.3.3</version>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet_version}</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.elasticsearch</groupId>
+			<artifactId>elasticsearch</artifactId>
+			<version>${elasticsearch_version}</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
 			<artifactId>lucene-core</artifactId>
@@ -64,13 +73,13 @@
 		<dependency>
 			<groupId>org.ansj</groupId>
 			<artifactId>ansj_seg</artifactId>
-			<version>1.4</version>
+			<version>${ansj_version}</version>
 			<classifier>min</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.ansj</groupId>
 			<artifactId>tree_split</artifactId>
-			<version>1.4</version>
+			<version>${ansj_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ansj</groupId>
@@ -80,7 +89,7 @@
 		<dependency>
 			<groupId>com.belerweb</groupId>
 			<artifactId>pinyin4j</artifactId>
-			<version>2.5.0</version>
+			<version>${pinyin4j_version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>me.xuender</groupId>
@@ -97,39 +106,34 @@
 		<dependency>
 			<groupId>com.chenlb.mmseg4j</groupId>
 			<artifactId>mmseg4j-core</artifactId>
-			<version>1.9.1</version>
+			<version>${mmseg4j_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.chenlb.mmseg4j</groupId>
 			<artifactId>mmseg4j-analysis</artifactId>
-			<version>1.9.1</version>
-		</dependency>
-		<dependency>
-			<groupId>javax.servlet</groupId>
-			<artifactId>javax.servlet-api</artifactId>
-			<version>3.1-b06</version>
+			<version>${mmseg4j_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
-			<version>1.3</version>
+			<version>${tika_version}</version>
 		</dependency>
 		<dependency>
 		    <groupId>org.apache.tika</groupId>
 		    <artifactId>tika-parsers</artifactId>
-		    <version>1.3</version>
+		    <version>${tika_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.webapp</groupId>
 			<artifactId>webutils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${web_version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.elasticsearch</groupId>
-			<artifactId>elasticsearch</artifactId>
-			<version>1.1.1</version>
-		</dependency>
+		<!-- <dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.3.3</version>
+		</dependency> -->
 
 	</dependencies>
 
