--- a/webquartz/pom.xml
+++ b/webquartz/pom.xml
@@ -54,18 +54,18 @@
 		<dependency>
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-log4j12</artifactId>
-			<version>1.6.1</version>
+			<version>${slf4j_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
-			<version>1.9</version>
+			<version>${commons_configuration}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.quartz-scheduler</groupId>
 			<artifactId>quartz</artifactId>
-			<version>2.2.1</version>
+			<version>${quartz_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>javax.transaction</groupId>
