--- a/webservice/pom.xml
+++ b/webservice/pom.xml
@@ -14,8 +14,8 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<hamcrest_version>1.3</hamcrest_version>
-		<spring_version>4.1.0.RELEASE</spring_version>
+		<hessian_version>4.0.7</hessian_version>
+		<cxf_version>2.7.8</cxf_version>
 	</properties>
 
 	<build>
@@ -29,28 +29,28 @@
 		<dependency>
 			<groupId>org.apache.thrift</groupId>
 			<artifactId>libthrift</artifactId>
-			<version>0.9.1</version>
+			<version>${thrift_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
-			<version>1.3</version>
+			<version>${hamcrest_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.cxf</groupId>
 			<artifactId>apache-cxf</artifactId>
-			<version>2.7.8</version>
+			<version>${cxf_version}</version>
 			<type>pom</type>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpcore</artifactId>
-			<version>4.2.1</version>
+			<version>${httpcomponents_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.2.1</version>
+			<version>${httpcomponents_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -70,7 +70,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-remoting</artifactId>
-			<version>2.0.8</version>
+			<version>${spring_component}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
@@ -85,13 +85,12 @@
 		<dependency>
 			<groupId>com.caucho</groupId>
 			<artifactId>hessian</artifactId>
-			<version>4.0.7</version>
-			<!-- <version>3.1.5</version> -->
+			<version>${hessian_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.webapp</groupId>
 			<artifactId>webutils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${web_version}</version>
 		</dependency>
 
 	</dependencies>
