--- a/webspring/pom.xml
+++ b/webspring/pom.xml
@@ -67,59 +67,28 @@
 		<dependency>
 	    	<groupId>org.springframework</groupId>
 	    	<artifactId>spring-test</artifactId>
-	    	<version>4.0.0.RELEASE</version>
+	    	<version>${spring_version}</version>
 	    </dependency>
 	    <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-aspects</artifactId>
 			<version>${spring_version}</version>
 		</dependency>
+		<dependency>
+	      <groupId>org.springframework</groupId>
+	      <artifactId>spring-oxm</artifactId>
+	      <version>${spring_version}</version>
+	    </dependency>
 	    <dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
-			<version>1.7.1</version>
+			<version>${aspectj_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjweaver</artifactId>
-			<version>1.7.1</version>
+			<version>${aspectj_version}</version>
 		</dependency>
-		<!-- for xml -->
-	    <dependency>
-	      <groupId>org.springframework</groupId>
-	      <artifactId>spring-oxm</artifactId>
-	      <version>4.0.0.RELEASE</version>
-	    </dependency>
-	    <dependency>
-	      <groupId>com.thoughtworks.xstream</groupId>
-	      <artifactId>xstream</artifactId>
-	      <version>1.4.3</version>
-	    </dependency>
-
-	    <!-- for json -->
-	    <dependency>
-            <groupId>org.codehaus.jackson</groupId>
-            <artifactId>jackson-core-lgpl</artifactId>
-            <version>1.8.1</version>
-        </dependency>
-	    <dependency>
-	      <groupId>org.codehaus.jackson</groupId>
-	      <artifactId>jackson-mapper-asl</artifactId>
-	      <version>1.9.10</version>
-	    </dependency>
-
-	    <dependency>
-	    	<groupId>org.mockito</groupId>
-	    	<artifactId>mockito-all</artifactId>
-	    	<version>1.9.0</version>
-	    </dependency>
-	    <!--
-	    <dependency>
-	    	<groupId>org.codehaus.groovy</groupId>
-	    	<artifactId>groovy-all</artifactId>
-	    	<version>2.1.0</version>
-	    </dependency>
-	     -->
 	    <dependency>
 			<groupId>cglib</groupId>
 			<artifactId>cglib</artifactId>
@@ -128,7 +97,7 @@
 		<dependency>
 			<groupId>com.webapp</groupId>
 			<artifactId>webutils</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${web_version}</version>
 		</dependency>
 	</dependencies>
 
