--- a/webtemplate/pom.xml
+++ b/webtemplate/pom.xml
@@ -25,42 +25,42 @@
 		<dependency>
 			<groupId>org.freemarker</groupId>
 			<artifactId>freemarker</artifactId>
-			<version>2.3.20</version>
+			<version>${freemarker_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
-			<version>5.1.28</version>
+			<version>${mysql_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.rapid-framework</groupId>
 			<artifactId>rapid-core</artifactId>
-			<version>4.0.5</version>
+			<version>${rapid_core}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.rapid-framework</groupId>
 			<artifactId>rapid-generator</artifactId>
-			<version>4.0.6</version>
+			<version>${rapid_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.rapid-framework</groupId>
 			<artifactId>rapid-generator-ext</artifactId>
-			<version>4.0.6</version>
+			<version>${rapid_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.googlecode.rapid-framework</groupId>
 			<artifactId>rapid-generator-template</artifactId>
-			<version>4.0.6</version>
+			<version>${rapid_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis</artifactId>
-			<version>3.2.4</version>
+			<version>${mybatis_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mybatis</groupId>
 			<artifactId>mybatis-spring</artifactId>
-			<version>1.2.2</version>
+			<version>${mybatis_spring}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
