--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -15,19 +15,18 @@
 	<name>webutils</name>
 
 	<properties>
-		<commons-configuration_version>1.10</commons-configuration_version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-email</artifactId>
-			<version>1.2</version>
+			<version>${commons_email}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
-			<version>${commons-configuration_version}</version>
+			<version>${commons_configuration}</version>
 			<!-- <exclusions>
 				<exclusion>
 					<groupId>commons-lang</groupId>
@@ -38,13 +37,13 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-math3</artifactId>
-			<version>3.3</version>
+			<version>${commons_math3}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-pool2</artifactId>
-			<version>2.0</version>
+			<version>${commons_pool2}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -54,7 +53,7 @@
 		<dependency>
 			<groupId>commons-beanutils</groupId>
 			<artifactId>commons-beanutils</artifactId>
-			<version>1.9.2</version>
+			<version>${commons_beanutils}</version>
 		</dependency>
 
 		<dependency>
@@ -77,7 +76,7 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.2.1</version>
+			<version>${httpcomponents_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>dom4j</groupId>
