--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -104,12 +104,13 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit_version}</version>
-			<scope>compile</scope>
+			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
 			<artifactId>hamcrest-all</artifactId>
 			<version>${hamcrest_version}</version>
+			<scope>test</scope>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
