--- a/webutils-release/pom.xml
+++ b/webutils-release/pom.xml
@@ -14,6 +14,19 @@
 	<packaging>jar</packaging>
 	<name>webutils-release</name>
 
+	<dependencies>
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>${servlet_version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.jpinyin</groupId>
+			<artifactId>jpinyin</artifactId>
+			<version>1.0</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<defaultGoal>install</defaultGoal>
 		<finalName>commons-utils</finalName>
