--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -120,6 +120,17 @@
 			<artifactId>saxpath</artifactId>
 			<version>1.0-FCS</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jpinyin</groupId>
+			<artifactId>jpinyin</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.luhuiguo</groupId>
+			<artifactId>chinese-utils</artifactId>
+			<version>1.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
