--- a/webapps/pom.xml
+++ b/webapps/pom.xml
@@ -32,6 +32,10 @@
 	</reporting> -->
 	<dependencies>
 		<dependency>
+			<groupId>org.jodd</groupId>
+			<artifactId>jodd-core</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>opensymphony</groupId>
 			<artifactId>sitemesh</artifactId>
 			<version>2.4.2</version>
