--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -297,7 +297,6 @@
 					</executions>
 				</plugin>
 
-
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-help-plugin</artifactId>
@@ -317,14 +316,14 @@
 	<!-- 发布到私服 -->
 	<distributionManagement>
 		<repository>
-			<id>releases</id>
-			<name>pub releases</name>
-			<url></url>
+			<id>archiva.internal</id>
+			<name>Nexus Release Repository</name>
+			<url>http://10.18.6.114:8081/nexus/content/repositories/releases</url>
 		</repository>
 		<snapshotRepository>
-			<id>snapshot</id>
-			<name>pub snapshot</name>
-			<url></url>
+			<id>archiva.snapshots</id>
+			<name>Nexus Snapshot Repository</name>
+			<url>http://10.18.6.114:8081/nexus/content/repositories/snapshots</url>
 		</snapshotRepository>
 	</distributionManagement>
 
@@ -341,11 +340,7 @@
 		<repository>
 			<id>apache-snapshots</id>
 			<name>Apache SNAPSHOT Repository</name>
-			<!--
-			<url>http://repository.sonatype.org/content/groups/public/</url>
-			 -->
 			 <url>http://repository.apache.org/snapshots/</url>
-
 			<snapshots>
 				<enabled>true</enabled>
 			</snapshots>
@@ -432,7 +427,7 @@
 		<url>http://download.java.net/maven/2/</url>
 	 -->
 
-	<!-- 远程插件仓库仓库配置 -->
+	<!-- 远程插件仓库仓库配置-->
 	<pluginRepositories>
 		<pluginRepository>
 			<releases>
@@ -446,9 +441,6 @@
 			<id>codehausSnapshots</id>
 			<name>Codehaus Snapshots</name>
 			<url>http://snapshots.maven.codehaus.org/maven2</url>
-			<!--
-			<url>http://repo1.maven.org/maven2</url>
-			-->
 			<layout>default</layout>
 		</pluginRepository>
 	</pluginRepositories>
