--- a/webutils-release/pom.xml
+++ b/webutils-release/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 	<artifactId>jk-utils</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 
 	<dependencies>
 		<dependency>
