--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -78,6 +78,11 @@
 			<version>${commons_email}</version>
 		</dependency>
 		<dependency>
+			<groupId>commons-codec</groupId>
+			<artifactId>commons-codec</artifactId>
+			<version>1.9</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-configuration</groupId>
 			<artifactId>commons-configuration</artifactId>
 			<version>${commons_configuration}</version>
