--- a/webspring/pom.xml
+++ b/webspring/pom.xml
@@ -46,6 +46,12 @@
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>${spring_version}</version>
+		</dependency>
+				
+		<dependency>
+			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
 			<version>${spring_version}</version>
 		</dependency>
@@ -79,6 +85,11 @@
 	      <artifactId>spring-oxm</artifactId>
 	      <version>${spring_version}</version>
 	    </dependency>
+	    <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-dbcp2</artifactId>
+			<version>${commons_dbcp}</version>
+		</dependency>
 	    <dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
