--- a/webspring/src/main/resources/log4j.properties
+++ b/webspring/src/main/resources/log4j.properties
@@ -12,9 +12,9 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c:%L - %m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 ###console,debug,info,warn.error
-log4j.rootLogger=info, stdout
+log4j.rootLogger=error, stdout
 log4j.logger.com.opensymphony.xwork2=ERROR
-log4j.logger.org.springframework=warn
+log4j.logger.org.springframework=ERROR
 #log4j.logger.org.hibernate=info
 #log4j.logger.org.hibernate=debug
 
