--- a/webutils/src/main/resources/log4j.properties
+++ b/webutils/src/main/resources/log4j.properties
@@ -1,4 +1,4 @@
-log4j.rootCategory=info,stdout,fileDebug,fileInfo,fileError
+log4j.rootCategory=erro,stdout,fileDebug,fileInfo,fileError
 
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
@@ -23,7 +23,7 @@ log4j.appender.fileError.layout.ConversionPattern=%d-[TS] %p %t %c - %m%n
 log4j.logger.com.neusoft=DEBUG
 log4j.logger.com.opensymphony.oscache=ERROR
 log4j.logger.net.sf.navigator=ERROR
-
+log4j.logger.org.springframework=ERROR
 log4j.logger.com.ibatis=debug
 log4j.logger.com.ibatis.common.jdbc.SimpleDataSource=debug
 log4j.logger.com.ibatis.common.jdbc.ScriptRunner=debug
