--- a/webspring/src/main/resources/log4j.properties
+++ b/webspring/src/main/resources/log4j.properties
@@ -12,7 +12,7 @@ log4j.appender.stdout.layout.ConversionPattern=%d{ABSOLUTE} %5p %c:%L - %m%n
 
 ### set log levels - for more verbose logging change 'info' to 'debug' ###
 ###console,debug,info,warn.error
-log4j.rootLogger=error, stdout
+log4j.rootLogger=ERROR, stdout
 log4j.logger.com.opensymphony.xwork2=ERROR
 log4j.logger.org.springframework=ERROR
 #log4j.logger.org.hibernate=info
