--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -58,7 +58,7 @@
 		<rapid_version>4.0.6</rapid_version>
 		<rapid_core>4.0.5</rapid_core>
 		<encoding>UTF-8</encoding>
-		<mysql_version>5.1.20</mysql_version>
+		<mysql_version>5.1.34</mysql_version>
 		<jedis_version>2.5.2</jedis_version>
 		<mongodb_version>2.12.3</mongodb_version>
 		<quartz_version>2.2.1</quartz_version>
@@ -156,66 +156,20 @@
 		<outputDirectory>target/classes</outputDirectory>
 		<testOutputDirectory>target/test-classes</testOutputDirectory>
 		<directory>${basedir}/target</directory>
+		<!-- <resources>
+			<resource>
+				<directory></directory>
+				<filtering></filtering>
+				<includes>
+					<include></include>
+				</includes>
+				<excludes>
+					<exclude></exclude>
+				</excludes>
+			</resource>
+		</resources> -->
 		<pluginManagement>
 			<plugins>
-				<!-- Project JDK Compile Version -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-compiler-plugin</artifactId>
-					<extensions>false</extensions>
-	        		<inherited>true</inherited>
-					<version>2.5</version>
-					<configuration>
-						<source>${jdk_version}</source>
-						<target>${jdk_version}</target>
-						<encoding>${encoding}</encoding>
-					</configuration>
-				</plugin>
-
-				<!-- war插件 -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-war-plugin</artifactId>
-					<version>2.2</version>
-					<configuration>
-						<webappDirectory>target/webapp</webappDirectory>
-						<warSourceDirectory>webapp</warSourceDirectory>
-						<warSourceExcludes></warSourceExcludes>
-						<warSourceIncludes></warSourceIncludes>
-						<webResources>
-				            <!-- 移动指定文件夹到指定位置
-							<resource>
-				                <directory>webapp/WEB-INF</directory>
-				                <targetPath>WEB-INF</targetPath>
-				                <filtering>true</filtering>
-				                <includes>
-				                    <include>**/*.jsp</include>
-				                </includes>
-				                <excludes>
-				                	<exclude>**/*.xml</exclude>
-				                </excludes>
-				            </resource>
-				            -->
-				        </webResources>
-					</configuration>
-				</plugin>
-
-				<!-- 测试插件 -->
-				<plugin>
-					<groupId>org.apache.maven.plugins</groupId>
-					<artifactId>maven-surefire-plugin</artifactId>
-					<version>2.12</version>
-					<configuration>
-						<skip>true</skip>
-						<!--
-						<parallel>methods</parallel>
-				        <threadCount>10</threadCount>
-				        <argLine>-Dfile.encoding=UTF-8</argLine>
-				        <testFailureIgnore>true</testFailureIgnore>
-				        -->
-					</configuration>
-				</plugin>
-
 				<!-- 资源管理插件  -->
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
@@ -244,6 +198,88 @@
 						<encoding>${encoding}</encoding>
 					</configuration>
 				</plugin>
+			
+				<!-- Project JDK Compile Version -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-compiler-plugin</artifactId>
+					<extensions>false</extensions>
+	        		<inherited>true</inherited>
+					<!-- <version>3.2</version> -->
+					<version>2.5.1</version>
+					<configuration>
+						<source>${jdk_version}</source>
+						<target>${jdk_version}</target>
+						<encoding>${encoding}</encoding>
+					</configuration>
+				</plugin>
+
+				<!-- copy dependency jar -->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-dependency-plugin</artifactId>
+					<version>2.9</version>
+					<executions>
+						<execution>
+							<id>copy</id>
+							<phase>package</phase>
+							<goals>
+								<goal>copy-dependencies</goal>
+							</goals>
+							<configuration>
+								<outputDirectory>${project.build.directory}/lib</outputDirectory>
+							</configuration>
+						</execution>
+					</executions>
+				</plugin>
+
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-war-plugin</artifactId>
+					<version>2.2</version>
+					<configuration>
+						<webappDirectory>target/webapp</webappDirectory>
+						<warSourceDirectory>webapp</warSourceDirectory>
+						<warSourceExcludes></warSourceExcludes>
+						<warSourceIncludes></warSourceIncludes>
+						<webResources>
+				            <!--移动指定文件夹到指定位置
+							<resource>
+				                <directory>webapp/WEB-INF</directory>
+				                <targetPath>WEB-INF</targetPath>
+				                <filtering>true</filtering>
+				                <includes>
+				                    <include>**/*.jsp</include>
+				                </includes>
+				                <excludes>
+				                	<exclude>**/*.xml</exclude>
+				                </excludes>
+				            </resource>-->
+				            
+				        </webResources>
+					</configuration>
+				</plugin> 
+
+				<!-- 测试插件-->
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<version>2.18</version>
+					<configuration>
+						<skipTests>true</skipTests>
+						<!-- <parallel>methods</parallel>
+				        <threadCount>10</threadCount>
+				        <argLine>-Dfile.encoding=UTF-8</argLine>
+				        <testFailureIgnore>true</testFailureIgnore>
+				        <includes>
+					        <include>regex Sample.java</include>
+	          			</includes>
+	          			<excludes>
+				            <exclude>**/TestCircle.java</exclude>
+				            <exclude>**/TestSquare.java</exclude>
+				        </excludes> -->
+					</configuration>
+				</plugin> 
 
 				<!-- javadoc插件 -->
 				<plugin>
@@ -264,7 +300,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 				    <artifactId>maven-source-plugin</artifactId>
-				    <version>2.2.1</version>
+				    <version>2.4</version>
 				    <configuration>
 				        <attach>true</attach>
 				        <encoding>${encoding}</encoding>
@@ -279,7 +315,7 @@
 				    </executions>
 				</plugin>
 
-				<!-- 检测报告插件 -->
+				<!-- 检测报告插件
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-pmd-plugin</artifactId>
@@ -295,8 +331,9 @@
 							</goals>
 						</execution>
 					</executions>
-				</plugin>
+				</plugin> -->
 
+				<!-- 
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-help-plugin</artifactId>
@@ -307,7 +344,7 @@
 					<groupId>org.codehaus.mojo</groupId>
 					<artifactId>sonar-maven-plugin</artifactId>
 					<version>2.2</version>
-				</plugin>
+				</plugin> -->
 			</plugins>
 		</pluginManagement>
 
