--- a/webnosql/src/main/resources/redis.properties
+++ b/webnosql/src/main/resources/redis.properties
@@ -1,8 +1,8 @@
 
 #------------------- redis pool -----------------------#
-redis.ip=127.0.0.1
+redis.ip=182.92.193.119
 redis.port=6379
-redis.password=root
+redis.password=king
 redis.timeout=5000
 
 #\u6700\u5927\u5206\u914d\u7684\u5bf9\u8c61\u6570  
