--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -19,6 +19,11 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>org.apache.zookeeper</groupId>
+			<artifactId>zookeeper</artifactId>
+			<version>3.4.6</version>
+		</dependency>
+		<dependency>
 			<groupId>it.unimi.dsi</groupId>
 			<artifactId>fastutil</artifactId>
 			<version>6.5.15</version>
