--- a/webmybatis/pom.xml
+++ b/webmybatis/pom.xml
@@ -43,14 +43,9 @@
 			<version>${spring_version}</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-orm</artifactId>
-			<version>${spring_version}</version>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
-			<version>${commons_dbcp}</version>
+			<version>${commons_dbcp2}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.commons</groupId>
