--- a/webactivemq/pom.xml
+++ b/webactivemq/pom.xml
@@ -22,7 +22,11 @@
 			<artifactId>commons-configuration</artifactId>
 			<version>${commons_configuration}</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.apache.kafka</groupId>
+			<artifactId>kafka_2.11</artifactId>
+			<version>0.8.2.1</version>
+		</dependency>
 		<dependency>
 			<groupId>com.alibaba.rocketmq</groupId>
 			<artifactId>rocketmq-client</artifactId>
