--- a/webframe/pom.xml
+++ b/webframe/pom.xml
@@ -74,6 +74,11 @@
 			<artifactId>cglib</artifactId>
 			<version>2.2.2</version>
 		</dependency>
+		<dependency>
+			<groupId>com.webapp</groupId>
+			<artifactId>webutils</artifactId>
+			<version>${web_version}</version>
+		</dependency>
 	</dependencies>
 	
 	<build>
@@ -95,16 +100,6 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
-				<artifactId>jetty-maven-plugin</artifactId>
-				<configuration>
-					<scanIntervalSeconds>2</scanIntervalSeconds>
-					<webAppConfig>
-						<contextPath>/</contextPath>
-					</webAppConfig>
-				</configuration>
-			</plugin>
-			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
@@ -123,8 +118,9 @@
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.mortbay.jetty</groupId>
+				<groupId>org.eclipse.jetty</groupId>
 				<artifactId>jetty-maven-plugin</artifactId>
+				<version>9.2.11.v20150529</version>
 				<configuration>
 					<connectors>
                         <connector implementation="org.eclipse.jetty.server.nio.SelectChannelConnector">
