--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -4,9 +4,13 @@
 		http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.webapp</groupId>
+	<parent>
+		<groupId>com.webapp</groupId>
+		<artifactId>webbase</artifactId>
+		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../webbase/pom.xml</relativePath>
+	</parent>
 	<artifactId>webcommon</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>webcommon</name>
 
@@ -30,37 +34,23 @@
 	</modules>
 
 	<properties>
-		<jdk_version>1.8</jdk_version>
-		<log4j_version>2.2</log4j_version>
-		<slf4j_version>1.7.12</slf4j_version>
 		<hamcrest_version>1.3</hamcrest_version>
-		<junit_version>4.12</junit_version>
 		<freemarker_version>2.3.22</freemarker_version>
 		<struts_version>2.3.24</struts_version>
 		<spring_version>4.1.6.RELEASE</spring_version>
 		<spring_component>2.0.8</spring_component>
 		<aspectj_version>1.8.5</aspectj_version>
-		<fastjson_version>1.2.5</fastjson_version>
 		<jackson_version>2.5.3</jackson_version>
-		<jodd_version>3.6.5</jodd_version>
-		<joda-time_version>2.7</joda-time_version>
 		<guava_version>18.0</guava_version>
 		<commons_io>2.4</commons_io>
-		<commons_lang3>3.4</commons_lang3>
 		<commons_math3>3.5</commons_math3>
 		<commons_pool2>2.3</commons_pool2>
 		<commons_dbcp2>2.1</commons_dbcp2>
-		<commons_email>1.3.3</commons_email>
-		<commons_beanutils>1.9.2</commons_beanutils>
-		<commons_configuration>1.10</commons_configuration>
-		<httpcomponents_version>4.4.1</httpcomponents_version>
-		<servlet_version>3.1.0</servlet_version>
 		<mybatis_version>3.2.8</mybatis_version>
 		<mybatis_spring>1.2.2</mybatis_spring>
 		<hibernate_version>4.3.6.Final</hibernate_version>
 		<rapid_version>4.0.6</rapid_version>
 		<rapid_core>4.0.5</rapid_core>
-		<encoding>UTF-8</encoding>
 		<mysql_version>5.1.35</mysql_version>
 		<jedis_version>2.7.2</jedis_version>
 		<mongodb_version>3.0.1</mongodb_version>
@@ -69,7 +59,6 @@
 		<activemq_core_verion>5.7.0</activemq_core_verion>
 		<thrift_version>0.9.2</thrift_version>
 		<web_version>0.0.1-SNAPSHOT</web_version>
-		<utils_version>1.0.0</utils_version>
 		<!--
 			${env.PATH}
 			${project.PATH}
@@ -79,48 +68,10 @@
 	</properties>
 
 	<dependencies>
-	
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-core</artifactId>
-			<version>${log4j_version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-slf4j-impl</artifactId>
-			<version>${log4j_version}</version>
-		</dependency>
-		<!-- <dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-to-slf4j</artifactId>
-			<version>${log4j_version}</version>
-		</dependency> -->
-		<dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-api</artifactId>
-			<version>${slf4j_version}</version>
-		</dependency>
-		<!-- <dependency>
-			<groupId>org.slf4j</groupId>
-			<artifactId>slf4j-log4j12</artifactId>
-			<version>${slf4j_version}</version>
-		</dependency> -->
-		<dependency>
-			<groupId>joda-time</groupId>
-			<artifactId>joda-time</artifactId>
-			<version>${joda-time_version}</version>
-		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>${guava_version}</version>
-		</dependency>
-		<!--junit-->
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit_version}</version>
-			<scope>test</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.hamcrest</groupId>
@@ -128,16 +79,6 @@
 			<version>${hamcrest_version}</version>
 			<scope>test</scope>
 			<optional>true</optional>
-		</dependency>
-		<dependency>
-			<groupId>com.alibaba</groupId>
-			<artifactId>fastjson</artifactId>
-			<version>${fastjson_version}</version>
-		</dependency>
-		<dependency>
-			<groupId>org.apache.commons</groupId>
-			<artifactId>commons-lang3</artifactId>
-			<version>${commons_lang3}</version>
 		</dependency>
 	</dependencies>
 	<dependencyManagement>
