--- a/weblucene/pom.xml
+++ b/weblucene/pom.xml
@@ -135,10 +135,10 @@
 		    <version>${tika_version}</version>
 		</dependency>
 		<dependency>
-			<groupId>com.webapp</groupId>
-			<artifactId>webutils</artifactId>
-			<version>${web_version}</version>
-		</dependency>
+  			<groupId>com.webapp</groupId>
+  			<artifactId>utils-common</artifactId>
+  			<version>${utils_version}</version>
+  		</dependency>
 
 		<!-- <dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
