--- a/webutils/src/test/resources/build_dev.properties
+++ b/webutils/src/test/resources/build_dev.properties
@@ -1,6 +1,7 @@
 ###------mysql config------###
 driver=com.mysql.jdbc.Driver
-#url=jdbc:mysql://10.18.6.91:3306/meng800_show?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-url=jdbc:mysql://182.92.193.119:3306/test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+url=jdbc:mysql://10.18.6.91:3306/meng800_show_test?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+#url=jdbc:mysql://182.92.193.119:3306/common?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 username=root
-password=kingadmin
+#password=kingadmin
+password=1q2w3e4r
