--- a/webframe/src/main/resources/build_pub.properties
+++ b/webframe/src/main/resources/build_pub.properties
@@ -1,5 +1,5 @@
 ###------mysql config------###
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://172.31.33.37:3306/licai?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
-username=cfp_user
-password=zoq$Gmw@FQjx
+url=jdbc:mysql://localhost:3306/common?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+username=root
+password=kingadmin
