--- a/webspark/pom.xml
+++ b/webspark/pom.xml
@@ -7,6 +7,14 @@
 	<artifactId>webspark</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 
+	<dependencies>
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>5.1.36</version>
+		</dependency>
+	</dependencies>
+
 	<build>
 		<plugins>
 			<!-- 指定JDK的编译版本 -->
