--- a/webutils/pom.xml
+++ b/webutils/pom.xml
@@ -16,25 +16,30 @@
 
 	<dependencies>
 		<dependency>
-	<groupId>cglib</groupId>
-	<artifactId>cglib-nodep</artifactId>
-	<version>3.2.0</version>
-</dependency>
-<dependency>
-	<groupId>org.javassist</groupId>
-	<artifactId>javassist</artifactId>
-	<version>3.20.0-GA</version>
-</dependency>
-<dependency>
-	<groupId>org.ow2.asm</groupId>
-	<artifactId>asm-all</artifactId>
-	<version>5.0.4</version>
-</dependency>
-<dependency>
-	<groupId>org.mybatis.scripting</groupId>
-	<artifactId>mybatis-freemarker</artifactId>
-	<version>1.1.1</version>
-</dependency>
+			<groupId>cglib</groupId>
+			<artifactId>cglib-nodep</artifactId>
+			<version>3.2.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.javassist</groupId>
+			<artifactId>javassist</artifactId>
+			<version>3.20.0-GA</version>
+		</dependency>
+		<dependency>
+			<groupId>org.ow2.asm</groupId>
+			<artifactId>asm-all</artifactId>
+			<version>5.0.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.mybatis.scripting</groupId>
+			<artifactId>mybatis-freemarker</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
+	        <groupId>com.speedment</groupId>
+	        <artifactId>speedment</artifactId>
+	        <version>2.2.3</version>
+	    </dependency>
 
 
 		<dependency>
@@ -115,5 +120,14 @@
 		</dependency>
 
     </dependencies>
+    <build>
+    	<plugins>
+    		<plugin>
+	            <groupId>com.speedment</groupId>
+	            <artifactId>speedment-maven-plugin</artifactId>
+	            <version>2.2.3</version>
+	        </plugin>
+    	</plugins>
+    </build>
 
 </project>
