--- a/webutils/src/test/resources/build_dev.properties
+++ b/webutils/src/test/resources/build_dev.properties
@@ -1,5 +1,5 @@
 ###------mysql config------###
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://10.20.69.225:3306/ictest?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
+url=jdbc:mysql://182.92.193.119:3306/common?useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true
 username=root
 password=1q2w3e4r
