--- a/webcommon/pom.xml
+++ b/webcommon/pom.xml
@@ -39,7 +39,7 @@
 		<velocity_version>1.7</velocity_version>
 		<velocity_tools>2.0</velocity_tools>
 		<sitemesh_version>3.0.1</sitemesh_version>
-		<spring_version>4.2.4.RELEASE</spring_version>
+		<!-- <spring_version>4.2.4.RELEASE</spring_version> -->
 		<spring_component>2.0.8</spring_component>
 		<aspectj_version>1.8.7</aspectj_version>
 		<jackson_version>2.6.4</jackson_version>
@@ -50,7 +50,7 @@
 		<commons_dbcp2>2.1.1</commons_dbcp2>
 		<commons_fileupload>1.3.1</commons_fileupload>
 		<jedis_version>2.8.0</jedis_version>
-		<mongodb_version>3.2.0</mongodb_version>
+		<mongodb_version>3.2.1</mongodb_version>
 		<quartz_version>2.2.2</quartz_version>
 		<activemq_verion>5.12.1</activemq_verion>
 		<activemq_core_verion>5.7.0</activemq_core_verion>
