--- a/utils/utils-common/pom.xml
+++ b/utils/utils-common/pom.xml
@@ -16,14 +16,17 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+			<version>${commons_lang3}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>fastjson</artifactId>
+			<version>${fastjson_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>joda-time</groupId>
 			<artifactId>joda-time</artifactId>
+			<version>${joda-time_version}</version>
 		</dependency>
 		<dependency>
 			<groupId>commons-configuration</groupId>
