--- a/utils/utils-code/pom.xml
+++ b/utils/utils-code/pom.xml
@@ -17,6 +17,7 @@
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
+			<version>${commons_lang3}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.freemarker</groupId>
