--- a/utils/utils-spring/pom.xml
+++ b/utils/utils-spring/pom.xml
@@ -19,6 +19,11 @@
 			<artifactId>spring-context-support</artifactId>
 			<version>${spring_version}</version>
 		</dependency>
+		<dependency>
+			<groupId>com.alibaba</groupId>
+			<artifactId>fastjson</artifactId>
+			<version>${fastjson_version}</version>
+		</dependency>
 	</dependencies>
 
 </project>
